# chrono-log

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: Animation.css  App.css  App.tsx
src-tauri/: .env  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: initiate_db.rs  lib.rs  main.rs  migrations.rs
src-tauri/src/migrator/: m_20250312_000001_create_personalization_table.rs  m_20250312_000001_create_pomodaro_table.rs  m_20250312_000001_create_tag_table.rs  m_20250312_000001_create_task_table.rs  m_20250312_000001_create_task_tag_table.rs  m_20250312_000001_create_workunit_table.rs  m_20250312_000001_create_workunit_tag_table.rs  mod.rs
src/assets/: attributes.tsx  icons.tsx
src/assets/svg/: Circle.tsx  Text.tsx
src/components/Dashboard/: AddTagsButton.tsx  DashboardControls.tsx  TaskDropDown.tsx  WorkUnitForm.tsx  WorkUnitFormControls.tsx  WorkUnitItem.tsx
src/components/Layouts/: MainLayout.tsx  (+1 more)
src/config/: pomodaro.ts  theme.ts
src/pages/: Analytics.tsx  Dashboard.tsx  Export.tsx  Pomodaro.tsx  Settings.tsx  Tags.tsx  Tasks.tsx
src/repository/: task.repository.ts  workunit.repository.ts
src/repository.ts/: tags.repository.ts
src/store/: Task.ts  pomodaro.ts  pomodaroStore.ts  tags.ts  tagsStore.ts  taskStore.ts  theme.ts  workUnitStore.ts
src/types/: tag.d.ts  task.d.ts  workUnit.d.ts
src/utils/: dateTime.ts  formatTime.ts  logger.ts  navItems.ts
src/validation/: schemas.ts  tagSchema.ts  taskSchema.ts
(+27 files in other folders)
