[package]
name = "chrono-log"
version = "0.1.0"
description = "A Tauri App for Tracking Time"
authors = ["you"]
edition = "2021"

[lib]
name = "chrono_log_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = "2"
sea-orm = { version = "1.1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
sea-orm-migration = { version = "1.1.0", features = ["sqlx-sqlite"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
